fix: update header and navigation styles for improved layout and visibility

--- a/rg_web/src/styles.scss
+++ b/rg_web/src/styles.scss
@@ -227,8 +227,10 @@ app-header {
 .header {
   width: 100%;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  height: 125px; // Fixed total height for header
-  overflow: hidden; // Prevent expansion
+  min-height: 125px;
+  position: relative;
+  z-index: 1000;
+  background: #fff;
 }
 
 header.site-header {
@@ -910,16 +912,26 @@ article th {
   }
 
   .main-navigation {
-    position: relative;
-    top: 0;
+    position: absolute;
+    top: 100px;
+    width: 100%;
+    z-index: 9999;
+    background: #fff;
     display: none;
+    left: 0;
+    padding-bottom: 10px;
   }
 
   .visible {
     display: block;
   }
 
-  .main-navigation ul,
+  .main-navigation ul {
+    display: inline-block;
+    float: right;
+    margin-right: 10px;
+  }
+
   .nav-menu > li {
     display: block;
     float: left;
